# ccn-software-sfn-2025

./: .gitignore  README.md  pyproject.toml
binder/: environment-cuda.yml  environment.yml  postBuild
docs/source/: conf.py  index.md  jupyter.md
docs/source/full/day1/: fundamentals_of_pynapple.md  head_direction.md  phase_precession.md
docs/source/full/day2/: current_injection.md  head_direction.md  nemos_advanced.md  place_cells.md  place_cells_part_1.md  place_cells_part_2.md  visual_coding.md
docs/source/full/group_projects/: 01_head_direction.md  02_phase_precession.md  03_visual_coding.md
docs/source/full/live_coding/: 02_current_injection.md  03_nemos_advanced.md
jenkins/: Dockerfile  Jenkinsfile
notebooks/: README.md
scripts/: check_setup.py  nwb_to_npz.py  setup.py  strip_text.py  test_pynaviz.py
src/workshop_utils/: __init__.py  feature_mask.py  fetch.py  plotting.py
